# DIO_WORKOUT_API

./: README.md
workout_api/: MakeFile  alembic.ini  main.py  pyproject.toml
workout_api/alembic/: env.py
workout_api/alembic/versions/: 066d078e8d4f_init_db.py
workout_api/atleta/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  schemas.py
workout_api/centro_treinamento/: controller.py  models.py  schemas.py
workout_api/contrib/: dependencies.py  schemas.py
