[project]
name = "dio-workout-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Luna",email = "lunacode00@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic (>=2.13.2,<3.0.0)",
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
